<resources>
    <string name="app_name">gui_swa_praktikum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="date_name">Name</string>
    <string name="description">Beschreibung</string>
    <string name="location">Ort</string>
    <string name="frequence">Frequenz</string>
    <string name="date_from">Von:</string>
    <string name="date_to">Bis:</string>
    <string name="category">Kategorie</string>
    <string name="commit">Zusage</string>
    <string name="save">Speichern</string>
</resources>
