<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.form.FormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/meeting_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:hint="@string/date_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#000" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:hint="@string/description"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#000" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:hint="@string/location"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#000" />

        <EditText
            android:id="@+id/frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:hint="@string/frequence"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/date_from" />

        <LinearLayout
            android:id="@+id/layout_meeting_from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black" />

            <Button
                android:id="@+id/select_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center"
            android:layout_weight="1"
            android:text="@string/date_to" />

        <LinearLayout
            android:id="@+id/layout_meeting_to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black" />

            <Button
                android:id="@+id/select_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black" />

        </LinearLayout>

        <EditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:hint="@string/category"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#000" />

        <Button
            android:id="@+id/save_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/save"
            android:textColor="#fff"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
